--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
   </script>
         <div id="resultContainer"></div>
         
-       <script>
+      <!-- ... (previous code) ... -->
+
+<script>
     document.getElementById("weatherForm").addEventListener("submit", async function(event) {
       event.preventDefault();
       const form = event.target;
@@ -67,25 +69,22 @@
       const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
       const data = await response.json();
       console.log(data);
-                                                                    
-                const resultContainer = document.getElementById('resultContainer');
-                resultContainer.innerHTML = `
-                    <h2>Weather Report for ${data.Property}</h2>
-                    <p>First Name: ${data.firstName}</p>
-                    <p>Last Name: ${data.lastName}</p>
-                    <p>Email: ${data.email}</p>
-                    <p>Property: ${data.Property}</p>
-                    <p>History Count: ${data.historyCount}</p>
-                    <p>Risk Factor: ${data.riskFactor}</p>
-                    <p>Risk Level: ${data.riskLevel}</p>
-                    <img src="${data.mapImage}" alt="Map Image">
-                    <pre>${JSON.stringify(data, null, 2)}</pre>
-                `;
-            } catch (error) {
-                console.error('Error fetching weather data:', error);
-            }
-        });
-            </script>
+
+      const resultContainer = document.getElementById('resultContainer');
+      resultContainer.innerHTML = `
+        <h2>Weather Report for ${data.Property}</h2>
+        <p>First Name: ${data.firstName}</p>
+        <p>Last Name: ${data.lastName}</p>
+        <p>Email: ${data.email}</p>
+        <p>Property: ${data.Property}</p>
+        <p>History Count: ${data.historyCount}</p>
+        <p>Risk Factor: ${data.riskFactor}</p>
+        <p>Risk Level: ${data.riskLevel}</p>
+        <img src="${data.mapImage}" alt="Map Image">
+        <pre>${JSON.stringify(data, null, 2)}</pre>
+      `;
+    });
+</script>
     </body>
 </html>
 
