--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
     });
   </script>
         <div id="resultContainer"></div>
-        
-      <!-- ... (previous code) ... -->
 
 <script>
     document.getElementById("weatherForm").addEventListener("submit", async function(event) {
@@ -62,9 +60,10 @@
       const form = event.target;
       const formData = new FormData(form);
 
-      const encodedAddress = encodeURIComponent(formData.get("address"));
+      // Remove the encodeURIComponent call from here
+      const address = formData.get("address");
       const query = new URLSearchParams(formData);
-      query.set("address", encodedAddress);
+      query.set("address", address);
 
       const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
       const data = await response.json();
@@ -85,6 +84,7 @@
       `;
     });
 </script>
+
     </body>
 </html>
 
