--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
         <p>Risk Factor: ${data.riskFactor}</p>
         <p>Risk Level: ${data.riskLevel}</p>
         <img src="${data.mapImage}" alt="Map Image">
-        <pre>${JSON.stringify(data, null, 2)}</pre>
+        <p>Date: ${data.event.date 1}</p>
+        <p>Type: ${data.event.weatherType 1}</p>
+        <p>Magnitude: ${data.event.magnitude 1}</p>
+        <p><img src="${data.event.icon 1}" alt="icon"></p>                
       `;
     });
 </script>
