--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <img src="${data.mapImage}" alt="Map Image">
         <p>Date: ${data.events['event.date1']}</p>
         <p>Type: ${data.events['event.weatherType1']}</p>
-        <p>Magnitude: ${data.events['event.magnitude1'}</p>
+        <p>Magnitude: ${data.events['event.magnitude1']}</p>
         <p><img src="${data.events['event.icon1']}" alt="icon"></p>                
       `;
     });
