--- a/index.html
+++ b/index.html
@@ -1,175 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Weather Report Form</title>
-        <style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Report Form</title>
+    <style>
         /* Set the map container size */
         #map {
             height: 500px;
             width: 100%;
         }
     </style>
-    </head>
-    <body>
-        <h1>Weather Report Form</h1>
-        <form id="weatherForm">
-            <input type="hidden" id="lat" name="lat" value="">
-          <input type="hidden" id="lng" name="lng" value="">
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" name="firstName" required><br>
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" required><br>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required><br>
-                        <label for="address">Address:</label>
-                        <input type="text" id="address" name="address" required autocomplete="off">
-                            <button type="submit">Submit</button>
-                            </form>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
-<script>
-  function initAutocomplete() {
-    const addressInput = document.getElementById("address");
-    const latInput = document.getElementById("lat");
-    const lngInput = document.getElementById("lng");
+</head>
+<body>
+    <h1>Weather Report Form</h1>
+    <form id="weatherForm">
+        <input type="hidden" id="lat" name="lat" value="">
+        <input type="hidden" id="lng" name="lng" value="">
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" name="firstName" required><br>
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" name="lastName" required><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" required autocomplete="off">
+        <button type="submit">Submit</button>
+    </form>
 
-    // Initialize Google Places Autocomplete
-    const autocomplete = new google.maps.places.Autocomplete(addressInput, {
-      types: ["geocode"],
-      componentRestrictions: { country: "us" }, // Restrict results to the United States
-    });
+    <div id="loadingMessage" style="display: none;">Submitting form, please wait...</div>
+    <div id="resultContainer"></div>
+    <div id="map"></div>
 
-    // Add a listener for the "place_changed" event to get the selected place
-    autocomplete.addListener("place_changed", function() {
-      const place = autocomplete.getPlace();
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
+    <script>
+        function initAutocomplete() {
+            const addressInput = document.getElementById("address");
+            const latInput = document.getElementById("lat");
+            const lngInput = document.getElementById("lng");
 
-      // Extract latitude and longitude from the selected place
-      const lat = place.geometry.location.lat();
-      const lng = place.geometry.location.lng();
-
-      // Extract address components from the selected place
-      const addressComponents = place.address_components;
-      let street = '';
-      let city = '';
-      let state = '';
-      let zipcode = '';
-
-      for (const component of addressComponents) {
-        const componentType = component.types[0];
-        if (componentType === 'street_number') {
-          street = component.long_name;
-        } else if (componentType === 'route') {
-          street += ' ' + component.long_name;
-        } else if (componentType === 'locality') {
-          city = component.long_name;
-        } else if (componentType === 'administrative_area_level_1') {
-          state = component.short_name;
-        } else if (componentType === 'postal_code') {
-          zipcode = component.long_name;
-        }
-      }
-
-      // Combine the address components to form the desired address format
-      const formattedAddress = `${street}, ${city}, ${state}, ${zipcode}`;
-
-      // Set the formatted address and lat/lng as the values of the corresponding input fields
-      addressInput.value = formattedAddress;
-      latInput.value = lat;
-      lngInput.value = lng;
-    });
-  }
-
-  // Rest of the code...
-</script>
-
-<div id="loadingMessage" style="display: none;">Submitting form, please wait...</div>
-
-        <div id="resultContainer"></div>
-        <div id="map"></div>
-
-<script>
-   document.getElementById("weatherForm").addEventListener("submit", async function(event) {
-  event.preventDefault();
-  const form = event.target;
-  const formData = new FormData(form);
-
-  // Show loading message
-  const loadingMessage = document.getElementById('loadingMessage');
-  loadingMessage.style.display = 'block';
-
-  // Remove the encodeURIComponent call from here
-  const address = formData.get("address");
-  const query = new URLSearchParams(formData);
-  query.set("address", address);
-
-  try {
-    const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
-    const data = await response.json();
-    console.log(data);
-
-    const resultContainer = document.getElementById('resultContainer');
-    resultContainer.innerHTML = `
-      <h2>Roof Damage Report for ${data.Property}</h2>
-      <h3>Square Feet: ${data.sqft}
-      <p>Number of Severe Storms: ${data.historyCount}</p>
-      <p><img src="https://img1.niftyimages.com/gb/5xnr/ebnr?val=${data.riskLevel}</></p>
-      <p>Risk Factor: ${data.riskLevel}</p>
-      <p>Date: ${data["event.date1"]}</p>
-      <p>Type: ${data["event.weatherType1"]}</p>
-      <p>Magnitude: ${data["event.magnitude1"]}</p>
-      <p><img src="${data["event.icon1"]}" alt="icon"></p>                
-    `;
-  } catch (error) {
-    console.error('Error fetching weather data:', error);
-    // Display an error message on the HTML page in case of an error
-    const resultContainer = document.getElementById('resultContainer');
-    resultContainer.innerHTML = '<p>An error occurred while fetching weather data. Please try again later.</p>';
-  } finally {
-    // Hide the loading message once the processing is complete
-    loadingMessage.style.display = 'none';
-  }
-});
-
-</script>
-        <script>
-        function initMap() {
-            // GeoJSON data representing the roof polygon
-            const geojsonData = ${data.geojson}; // Assuming data.geojson is already a parsed JavaScript object
-
-            // Centroid data
-            const centroidData = ${data.centroid}; // Assuming data.centroid is already a parsed JavaScript object
-            const centroidCoordinates = centroidData.coordinates;
-            const centroidLatLng = { lat: centroidCoordinates[1], lng: centroidCoordinates[0] };
-
-            // Create a new map centered at the centroid
-            const map = new google.maps.Map(document.getElementById("map"), {
-                center: centroidLatLng,
-                zoom: 18, // You can adjust the zoom level to fit the polygon
+            // Initialize Google Places Autocomplete
+            const autocomplete = new google.maps.places.Autocomplete(addressInput, {
+                types: ["geocode"],
+                componentRestrictions: { country: "us" }, // Restrict results to the United States
             });
 
-            // Convert the GeoJSON data to a Google Maps Polygon
-            const polygon = new google.maps.Polygon({
-                paths: geojsonData.coordinates,
-                strokeColor: "#FF0000",
-                strokeOpacity: 0.8,
-                strokeWeight: 2,
-                fillColor: "#FF0000",
-                fillOpacity: 0.35,
-            });
+            // Add a listener for the "place_changed" event to get the selected place
+            autocomplete.addListener("place_changed", function() {
+                const place = autocomplete.getPlace();
 
-            // Set the polygon on the map
-            polygon.setMap(map);
+                // Extract latitude and longitude from the selected place
+                const lat = place.geometry.location.lat();
+                const lng = place.geometry.location.lng();
 
-            // Mark the centroid as a marker on the map
-            const marker = new google.maps.Marker({
-                position: centroidLatLng,
-                map: map,
-                title: "Roof Centroid",
+                // Extract address components from the selected place
+                const addressComponents = place.address_components;
+                let street = '';
+                let city = '';
+                let state = '';
+                let zipcode = '';
+
+                for (const component of addressComponents) {
+                    const componentType = component.types[0];
+                    if (componentType === 'street_number') {
+                        street = component.long_name;
+                    } else if (componentType === 'route') {
+                        street += ' ' + component.long_name;
+                    } else if (componentType === 'locality') {
+                        city = component.long_name;
+                    } else if (componentType === 'administrative_area_level_1') {
+                        state = component.short_name;
+                    } else if (componentType === 'postal_code') {
+                        zipcode = component.long_name;
+                    }
+                }
+
+                // Combine the address components to form the desired address format
+                const formattedAddress = `${street}, ${city}, ${state}, ${zipcode}`;
+
+                // Set the formatted address and lat/lng as the values of the corresponding input fields
+                addressInput.value = formattedAddress;
+                latInput.value = lat;
+                lngInput.value = lng;
             });
         }
+
+        document.getElementById("weatherForm").addEventListener("submit", async function(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+
+            // Show loading message
+            const loadingMessage = document.getElementById('loadingMessage');
+            loadingMessage.style.display = 'block';
+
+            const address = formData.get("address");
+            const query = new URLSearchParams(formData);
+            query.set("address", address);
+
+            try {
+                const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
+                const data = await response.json();
+                console.log(data);
+
+                const resultContainer = document.getElementById('resultContainer');
+                resultContainer.innerHTML = `
+                    <h2>Roof Damage Report for ${data.Property}</h2>
+                    <h3>Square Feet: ${data.Sqft}</h3>
+                    <p>Number of Severe Storms: ${data.historyCount}</p>
+                    <p><img src="https://img1.niftyimages.com/gb/5xnr/ebnr?val=${data.riskLevel}"></p>
+                    <p>Risk Factor: ${data.riskFactor}</p>
+                    <p>Date: ${data["event.date1"]}</p>
+                    <p>Type: ${data["event.weatherType1"]}</p>
+                    <p>Magnitude: ${data["event.magnitude1"]}</p>
+                    <p><img src="${data["event.icon1"]}" alt="icon"></p>
+                `;
+
+                const geojsonData = ${data.geojson}; // Assuming data.geojson is already a parsed JavaScript object
+                const centroidData = ${data.centroid}; // Assuming data.centroid is already a parsed JavaScript object
+                const centroidCoordinates = centroidData.coordinates;
+                const centroidLatLng = { lat: centroidCoordinates[1], lng: centroidCoordinates[0] };
+
+                // Create a new map centered at the centroid
+                const map = new google.maps.Map(document.getElementById("map"), {
+                    center: centroidLatLng,
+                    zoom: 18, // You can adjust the zoom level to fit the polygon
+                });
+
+                // Convert the GeoJSON data to a Google Maps Polygon
+                const polygon = new google.maps.Polygon({
+                    paths: geojsonData.coordinates,
+                    strokeColor: "#FF0000",
+                    strokeOpacity: 0.8,
+                    strokeWeight: 2,
+                    fillColor: "#FF0000",
+                    fillOpacity: 0.35,
+                });
+
+                // Set the polygon on the map
+                polygon.setMap(map);
+
+                // Mark the centroid as a marker on the map
+                const marker = new google.maps.Marker({
+                    position: centroidLatLng,
+                    map: map,
+                    title: "Roof Centroid",
+                });
+
+                // Hide the loading message once the processing is complete
+                loadingMessage.style.display = 'none';
+            } catch (error) {
+                console.error('Error fetching weather data:', error);
+                // Display an error message on the HTML page in case of an error
+                const resultContainer = document.getElementById('resultContainer');
+                resultContainer.innerHTML = '<p>An error occurred while fetching weather data. Please try again later.</p>';
+                // Hide the loading message in case of an error
+                loadingMessage.style.display = 'none';
+            }
+        });
     </script>
-
-    </body>
+</body>
 </html>
-
