--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             try {
                 const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
                 const data = await response.json();
-
+                console.log(data); 
+                
                 // Make sure the data object is properly received and contains the expected properties
                 if (data && data.Property && data.sqft && data.historyCount && data.riskLevel && data['event.date1'] && data['event.weatherType1'] && data['event.magnitude1'] && data['event.icon1']) {
                     const resultContainer = document.getElementById('resultContainer');
