--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                 const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
                 const data = await response.json();
                 console.log(data); 
+                data.Centroid = JSON.parse(data.Centroid);
+                data.Geojson = JSON.parse(data.Geojson);
                 
                 // Make sure the data object is properly received and contains the expected properties
                 if (data && data.Property && data.sqft && data.historyCount && data.riskLevel && data['event.date1'] && data['event.weatherType1'] && data['event.magnitude1'] && data['event.icon1']) {
