--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <button type="submit">Submit</button>
     </form>
 
-    <div id="loadingMessage" style="display: none;">Submitting form, please wait...</div>
+    <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
     <div id="resultContainer"></div>
-    <div id="map"></div>
+   <div id="map"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
     <script>
@@ -99,40 +99,65 @@
             query.set("address", address);
 
             try {
-                const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
-                const data = await response.json();
-                console.log(data); 
-                data.Centroid = JSON.parse(data.Centroid);
-                data.Geojson = JSON.parse(data.Geojson);
-                
-                // Make sure the data object is properly received and contains the expected properties
-                if (data && data.Property && data.sqft && data.historyCount && data.riskLevel && data['event.date1'] && data['event.weatherType1'] && data['event.magnitude1'] && data['event.icon1']) {
-                    const resultContainer = document.getElementById('resultContainer');
-                    resultContainer.innerHTML = `
-                        <h2>Roof Damage Report for ${data.Property}</h2>
-                        <h3>Square Feet: ${data.sqft}</h3>
-                        <p>Number of Severe Storms: ${data.historyCount}</p>
-                        <p><img src="https://img1.niftyimages.com/gb/5xnr/ebnr?val=${data.riskLevel}"></p>
-                        <p>Risk Factor: ${data.riskLevel}</p>
-                        <p>Date: ${data['event.date1']}</p>
-                        <p>Type: ${data['event.weatherType1']}</p>
-                        <p>Magnitude: ${data['event.magnitude1']}</p>
-                        <p><img src="${data['event.icon1']}" alt="icon"></p>
-                    `;
-                } else {
-                    // If the expected properties are not available, show an error message
-                    throw new Error('Invalid data received from the server.');
-                }
-            } catch (error) {
-                console.error('Error fetching weather data:', error);
-                // Display an error message on the HTML page in case of an error
-                const resultContainer = document.getElementById('resultContainer');
-                resultContainer.innerHTML = '<p>An error occurred while fetching weather data. Please try again later.</p>';
-            } finally {
-                // Hide the loading message once the processing is complete
-                loadingMessage.style.display = 'none';
-            }
-        });
+    const response = await fetch(`https://severe-weather.netlify.app/.netlify/functions/weather?${query.toString()}`);
+    const data = await response.json();
+
+    // Parse Centroid and Geojson strings back to JavaScript objects
+    data.Centroid = JSON.parse(data.Centroid);
+    data.Geojson = JSON.parse(data.Geojson);
+
+    // Access the weather events and display them in the HTML
+    const eventContainer = document.getElementById('eventContainer');
+    eventContainer.innerHTML = '';
+
+    for (let i = 1; i <= 10; i++) {
+        const eventDate = data[`event.date${i}`];
+        const weatherType = data[`event.weatherType${i}`];
+        const magnitude = data[`event.magnitude${i}`];
+        const iconUrl = data[`event.icon${i}`];
+
+        if (eventDate && weatherType && magnitude && iconUrl) {
+            const eventElement = document.createElement('div');
+            eventElement.innerHTML = `
+                <h3>Weather Event ${i}</h3>
+                <p>Date: ${eventDate}</p>
+                <p>Type: ${weatherType}</p>
+                <p>Magnitude: ${magnitude}</p>
+                <img src="${iconUrl}" alt="icon">
+            `;
+            eventContainer.appendChild(eventElement);
+        }
+    }
+const mapContainer = document.getElementById('map');
+const mapboxAccessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // Replace with your Mapbox access token
+const mapWidth = 800;
+const mapHeight = 600;
+const { coordinates } = data.Centroid;
+const [lng, lat] = coordinates;
+
+// Build the GeoJSON feature for the polygon
+const geojsonFeature = {
+    type: 'Feature',
+    properties: {},
+    geometry: data.Geojson,
+};
+
+// Convert the GeoJSON feature to a URL-encoded string
+const geojsonString = encodeURIComponent(JSON.stringify(geojsonFeature));
+
+// Create the URL for the Google static map with the polygon overlay
+const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/path-5+f44-0.5(${geojsonString})/${lng},${lat},14,0,0/${mapWidth}x${mapHeight}?access_token=pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ'`;
+
+// Display the map with the polygon overlay
+mapContainer.innerHTML = `<img src="${mapImage}" alt="Map with Polygon Overlay">`;
+
+
+} catch (error) {
+    console.error('Error fetching weather data:', error);
+    const resultContainer = document.getElementById('resultContainer');
+    resultContainer.innerHTML = '<p>An error occurred while fetching weather data. Please try again later.</p>';
+}
+
     </script>
 </body>
 </html>
