--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         }
     }
 const mapContainer = document.getElementById('map');
-const mapboxAccessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // Replace with your Mapbox access token
+const mapboxAccessToken = 'pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ'; // Replace with your Mapbox access token
 const mapWidth = 800;
 const mapHeight = 600;
 const { coordinates } = data.Centroid;
@@ -146,8 +146,7 @@ const geojsonFeature = {
 const geojsonString = encodeURIComponent(JSON.stringify(geojsonFeature));
 
 // Create the URL for the Google static map with the polygon overlay
-const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/path-5+f44-0.5(${geojsonString})/${lng},${lat},14,0,0/${mapWidth}x${mapHeight}?access_token=pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ'`;
-
+const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/path-5+f44-0.5(${geojsonString})/${lng},${lat},14,0,0/${mapWidth}x${mapHeight}?access_token=${mapboxAccessToken};
 // Display the map with the polygon overlay
 mapContainer.innerHTML = `<img src="${mapImage}" alt="Map with Polygon Overlay">`;
 
