--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <input type="text" id="address" name="address" required autocomplete="off">
         <button type="submit">Submit</button>
     </form>
-
+    
     <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
     <div id="resultContainer"></div>
-   <div id="map"></div>
+    <div id="eventContainer"></div>
+    <div id="map"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
     <script>
