--- a/index.html
+++ b/index.html
@@ -144,12 +144,8 @@ const geojsonFeature = {
       };
 
       // Convert the GeoJSON feature to a URL-encoded string
-      const geojsonString = encodeURIComponent(JSON.stringify(geojsonFeature));
-
-      // Create the URL for the Google static map with the polygon overlay
-      // Build the URL for the Mapbox static map with the zoom level (14) and center coordinates (lng, lat)
-      const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/${lng},${lat},${mapWidth}x${mapHeight}?access_token=${mapboxAccessToken}&zoom=14`;
-
+      const geojsonString = encodeURIComponent(JSON.stringify(geojsonFeature));   
+      const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/${lat},${lng},${mapWidth}x${mapHeight}?access_token=${mapboxAccessToken}&zoom=14`;
 
       // Display the map with the polygon overlay
       mapContainer.innerHTML = `<img src="${mapImage}" alt="Map with Polygon Overlay">`;
