--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report Form</title>
     <style>
-        /* Set the map container size */
-        #map {
-            height: 500px;
-            width: 100%;
-        }
+        body { margin: 0; padding: 0; }
+        #map { position: absolute; top: 0; bottom: 0; width: 100%; height: 500px; } /* Set map height */
     </style>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 </head>
+    
 <body>
-    <h1>Weather Report Form</h1>
+    <h1>Roof Report</h1>
     <form id="weatherForm">
         <input type="hidden" id="lat" name="lat" value="">
         <input type="hidden" id="lng" name="lng" value="">
@@ -28,10 +28,9 @@
         <button type="submit">Submit</button>
     </form>
     
-    <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
-    <div id="resultContainer"></div>
-    <div id="eventContainer"></div>
-    <div id="map"></div>
+   <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
+   <div id="eventContainer"></div>
+   <div id="map"></div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS72566eF3MF9HZ3HhUq4tuflB-0iJibE&libraries=places&callback=initAutocomplete" async defer></script>
     <script>
@@ -129,34 +128,42 @@
             eventContainer.appendChild(eventElement);
         }
     }
-const mapContainer = document.getElementById('map');
-const mapboxAccessToken = 'pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ'; // Replace with your Mapbox access token
-const mapWidth = 800;
-const mapHeight = 600;
-const { coordinates } = data.Centroid;
-const [lng, lat] = coordinates;
+    mapboxgl.accessToken = 'pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ';
+    const map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/light-v10',
+      center: [${data.Centroid.coordinates[0]}, ${data.Centroid.coordinates[1]}], // Use the coordinates from the Centroid object
+      zoom: 20 // Adjust the zoom level as needed
+    });
 
-// Build the GeoJSON feature for the polygon
-const geojsonFeature = {
-        type: "Feature",
-        properties: {},
-        geometry: data.Geojson,
-      };
+    // Extract the centroid and geojson from the data object
+    const centroid = ${data.Centroid};
+    const geojson = ${data.Geojson};
+    const coordinates = ${data.Geojson}.coordinates[0];
 
-      // Convert the GeoJSON feature to a URL-encoded string
-      const geojsonString = encodeURIComponent(JSON.stringify(geojsonFeature));   
-      const mapImage = `https://api.mapbox.com/styles/v1/mapbox/satellite-v9/static/${lat},${lng},${mapWidth}x${mapHeight}?access_token=${mapboxAccessToken}&zoom=14`;
+    map.on('load', () => {
+      // Add a data source containing GeoJSON data.
+      map.addSource('roof', {
+        type: 'geojson',
+        data: geojson
+      });
 
-      // Display the map with the polygon overlay
-      mapContainer.innerHTML = `<img src="${mapImage}" alt="Map with Polygon Overlay">`;
-    } catch (error) {
-      console.error("Error fetching weather data:", error);
-      const resultContainer = document.getElementById("resultContainer");
-      resultContainer.innerHTML =
-        "<p>An error occurred while fetching weather data. Please try again later.</p>";
-    }
-  });
+      // Add a new layer to visualize the polygon.
+      map.addLayer({
+        id: 'roof',
+        type: 'fill',
+        source: 'roof', // reference the data source
+        layout: {},
+        paint: {
+          'fill-color': '#ff0000', // red color fill (customize color as needed)
+          'fill-opacity': 0.5 // adjust opacity as needed
+        }
+      });
 
+      // Fit the map to the polygon's bounds
+      const bounds = coordinates.reduce((bounds, coord) => bounds.extend(coord), new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
+      map.fitBounds(bounds, { padding: 20 });
+    });
     </script>
 </body>
 </html>
