--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Weather Report Form</title>
     <style>
         body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; height: 500px; } /* Set map height */
+        #map { position: absolute; top: 0; bottom: 0; width: 100%; height: 500px; z-index: 0; } /* Set map height and z-index */
+        #formContainer { position: relative; z-index: 1; } /* Set z-index of the form container */
     </style>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 </head>
     
 <body>
     <h1>Roof Report</h1>
+     <div id="formContainer">
     <form id="weatherForm">
         <input type="hidden" id="lat" name="lat" value="">
         <input type="hidden" id="lng" name="lng" value="">
@@ -26,7 +28,7 @@
         <input type="text" id="address" name="address" required autocomplete="off">
         <button type="submit">Submit</button>
     </form>
-    
+     </div>
    <div id="loadingMessage" style="display: none;">Accessing Satellite Data, please wait...</div>
    <div id="eventContainer"></div>
    <div id="map"></div>
