--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body { margin: 0; padding: 0; }
         #map { position: absolute; top: 0; bottom: 0; width: 100%; height: 500px; z-index: 0; } /* Set map height and z-index */
-        #formContainer { position: relative; z-index: 1; } /* Set z-index of the form container */
+        #formContainer { position: relative; z-index: 1; background-color: white; padding: 20px; } /* Set z-index and styling for the form container */
+        h1, h2 { position: relative; z-index: 1; } /* Set z-index for headings */
     </style>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 </head>
@@ -137,7 +138,7 @@
                 mapboxgl.accessToken = 'pk.eyJ1Ijoicm9vZmxlZGV2ZWxvcGVyIiwiYSI6ImNrOGttMm4zbDAzOXMzbG8wcTZneDl1cXkifQ.SW133g8JQOfR8Rc2y7QZPQ';
                 const map = new mapboxgl.Map({
                     container: 'map',
-                    style: 'mapbox://styles/mapbox/light-v10',
+                    style: 'mapbox://styles/mapbox/satellite-v9',
                     center: [data.Centroid.coordinates[0], data.Centroid.coordinates[1]], // Use the coordinates from the Centroid object
                     zoom: 20 // Adjust the zoom level as needed
                 });
